tests/fixtures/effect-compiler/errors/EFX3100.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
      depthStencilState:
        stencilWriteMaskFront: 1
        stencilWriteMaskBack: 2
}%

CCProgram vs %{
  precision mediump float;
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
